--- a/Nonograms/Nonograms/Nonograms.vcxproj
+++ b/Nonograms/Nonograms/Nonograms.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClCompile Include="Nonograms.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="StringFunctions.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
