--- a/Nonograms/Nonograms/Nonograms.vcxproj
+++ b/Nonograms/Nonograms/Nonograms.vcxproj
@@ -130,7 +130,12 @@
     <ClCompile Include="Nonograms.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="StringFunctions.h" />
+    <ClInclude Include="headers\StringFunctions.h" />
+    <ClInclude Include="headers\Users.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="files\Accounts.txt" />
+    <Text Include="files\AccountsCount.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
