--- a/Nonograms/Nonograms/Nonograms.vcxproj
+++ b/Nonograms/Nonograms/Nonograms.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="Nonograms.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="headers\Constants.h" />
     <ClInclude Include="headers\StringFunctions.h" />
     <ClInclude Include="headers\Users.h" />
   </ItemGroup>
