--- a/Nonograms/Nonograms/Nonograms.vcxproj.filters
+++ b/Nonograms/Nonograms/Nonograms.vcxproj.filters
@@ -26,7 +26,10 @@
     <ClInclude Include="headers\Users.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="headers\Constants.h">
+    <ClInclude Include="headers\ConstantsAndStatics.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="headers\GameTools.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
