--- a/Nonograms/Nonograms/Nonograms.vcxproj.filters
+++ b/Nonograms/Nonograms/Nonograms.vcxproj.filters
@@ -32,6 +32,9 @@
     <ClInclude Include="headers\GameTools.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="headers\Commands.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Text Include="files\Accounts.txt" />
