--- a/Nonograms/Nonograms/Nonograms.vcxproj
+++ b/Nonograms/Nonograms/Nonograms.vcxproj
@@ -131,6 +131,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="headers\ConstantsAndGlobals.h" />
+    <ClInclude Include="headers\Engine.h" />
     <ClInclude Include="headers\GameTools.h" />
     <ClInclude Include="headers\Commands.h" />
     <ClInclude Include="headers\StringFunctions.h" />
